--- a/application-local.yml
+++ b/application-local.yml
@@ -35,10 +35,8 @@ spring:
           pivotalbank:
             clientId: pivotalbank
             clientSecret: secret
-
-  #datasource:
-  #  url: jdbc:mysql://localhost:3306/traderdb
-  #  username: traderdb
-  #  password: traderdb
-  #  driver-class-name: "com.mysql.jdbc.Driver"
-
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.autoconfigure.data.redis.RedisReactiveAutoConfiguration
+      - org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
+      - org.springframework.boot.autoconfigure.session.SessionAutoConfiguration
