--- a/web-service.yml
+++ b/web-service.yml
@@ -11,3 +11,7 @@ pivotal:
     symbols:
       it: ORCL,IBM,INTC,AMD,HPQ,CSCO,AAPL
       fs: JPM,C,MS,BAC,GS,WFC,BK
+
+logging:
+  level:
+    org.springframework.session: DEBUG
