--- a/application-cloud.yml
+++ b/application-cloud.yml
@@ -1,6 +1,6 @@
 targets:
   #uaa: ${vcap.services.pivotal-bank-sso.credentials.auth_domain}
-  uaa: https://pivotal-bank-sso.uaa.sys.lab01.pcf.pw
+  uaa: https://pivotal-bank-sso-one.uaa.sys.lab01.pcf.pw
 uaa:
   identity-zone-id: pivotal-bank-sso
 
