--- a/quotes-service.yml
+++ b/quotes-service.yml
@@ -3,7 +3,7 @@ spring:
      name: quotes-service
 pivotal:
   quotes:
-    quote_url: https://api.iextrading.com/1.0/stock/{symbol}/quote
-    quotes_url: https://api.iextrading.com/1.0/stock/market/batch?symbols={symbols}&types=quote
-    companies_url: http://dev.markitondemand.com/Api/v2/Lookup/json?input={name}
+    quote_url: https://cloud.iexapis.com/v1/stock/{symbol}/quote?token=pk_789f4f45c6ba4317a183a5e808348ea8
+    quotes_url: https://cloud.iexapis.com/v1/stock/market/batch?symbols={symbols}&types=quote&pk_789f4f45c6ba4317a183a5e808348ea8
+    symbols_url: https://cloud.iexapis.com/v1/ref-data/symbols?token=pk_789f4f45c6ba4317a183a5e808348ea8
 
